
2002-08-29  Juergen Reuter  <reuter@ipd.uka.de>

	* input/test/ancient-font.ly, mf/parmesan-heads.mf,
	scm/output-lib.scm, lily/note-head.cc: bugfix: make neume note
	heads accessible
 

2002-08-29  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* scm/music-functions.scm (unfold-repeats): Call new
	shift-duration-log correctly also for unfolded repeats.

2002-08-27  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* tex/titledefs.tex: Define \fetafont for use in titles.

	* scm/music-functions.scm (shift-duration-log), lily/parser.yy
	(Repeated_music): Handle dots correctly for \repeat tremolo.

2002-08-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/score.cc: remove paranoia code.

	* lily/parser.yy: don't include malloc.h

2002-08-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* flower/polynomial.cc (operator +): optimize += operator. No
	copying.

	* lily/source-file.cc (get_line): use binary search to determine
	line number. This kills another quadratic time-complexity term.

	* lily/include/source-file.hh (class Source_file): add newline_locations

	* flower/include/array.icc (binary_search_bounds): new function.

2002-08-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/tuplet-properties.ly (texidoc): bugfix

	* input/regression/beam-shortened-lengths.ly: add \stemUp

	* Documentation/user/refman.itely: 

2002-08-22  Tom Cato

        * Documentation/user/refman.itely: spelling fix.

2002-08-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (setup_paths): Prepend dirs to search path, instead
	of appending.  Fixes build when typical LilyPond 1.4 leftovers clutter
	the system.

	* flower/include/file-path.hh (prepend): New function.

2002-08-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/misc/ChangeLog-1.5: move 1.5 ChangeLog to misc/

	* lily/completion-note-heads-engraver.cc (class
	Completion_heads_engraver): don't be confused by polyphonic rhythms.

	* input/regression/completion-heads-polyphony.ly: new file.
