@@ -46,7 +46,7 @@ the incountable number of questions he answered on the mailing list,
 and Rune Zedeler for his energy in finding and fixing bugs.  Nicola
 Bernardini for inviting us to his workshop on music publishing, which
 was truly a masterclass, and Heinz Stolba and James Ingram for
-teaching us there. [wie nog meer?]
+teaching us there. 
 
 Playing and printing music is more than nice analogy: programming
 together is a lot of fun, and helping people is deeply satisfying, but
