@@ -1,3 +1,6 @@
+2000-08-30  Heikki Junes <hjunes@cc.hut.fi>
+        * make/lilypond.mandrake.spec.in: Mandrake adaptations from
+        redhat spec and rpm-skeleton found in Mandrake's home page.
 
 2002-08-29  Juergen Reuter  <reuter@ipd.uka.de>
 
